--- a/src/css/body.css
+++ b/src/css/body.css
@@ -125,10 +125,15 @@
     align-items: center;
     background-color: #4e5257;
     border-radius: 4px;
-    padding: 10px 16px;
+    padding: 8px 16px;
     margin-right: 12px;
     cursor: pointer;
     font-size: 14px;
+    border: 1px solid transparent;
+}
+
+.search-buttons div:hover {
+    border: 0.5px solid #bbb;
 }
 
 .google-offered-in {
@@ -142,4 +147,8 @@
 .google-offered-in a {
     color: #7da8ff;
     margin: 0px 5px;
+}
+
+.google-offered-in a:hover {
+    text-decoration: underline;
 }
