--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,7 +3,10 @@ body {
     margin: 0;
     padding: 0;
     background-color: #202124;
-    
+    min-width: 900px;
+    width: 100%;
+    /* min-height: 1500px; */
+    /* height: 100%; */
     color: #e8e8e8;
 }
 
