--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -7,6 +7,8 @@ footer {
     background-color: #2b2b2b;
     position: absolute;
     bottom: 0;
+    
+    min-width: 900px;
     width: 100%;
     padding-bottom: 4px;
     font-size: 14px;
